# PVE-VDIClient

./: .actrc  .flake8  .gitignore  .markdownlint.jsonc  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tray.py  vdiclient.ini.example  vdiclient.py
.github/workflows/: build-packages.yml
docs/: BUILDING.md  INSTALLATION.md
packaging/linux/: build-appimage.sh  build-deb.sh  build-flatpak.sh  build-rpm.sh  vdiclient.desktop
packaging/linux/appimage/: AppRun  vdiclient.desktop
packaging/linux/debian/: changelog  control  copyright  rules
packaging/linux/flatpak/: org.proxmox.VDIClient.desktop  org.proxmox.VDIClient.metainfo.xml  org.proxmox.VDIClient.yml  resize_icon.py
packaging/linux/rpm/: vdiclient.spec
packaging/pypi/: build.sh
packaging/windows/: README.md  build.bat  build.ps1  vdiclient.spec
packaging/windows/wix/: createmsi.py
templates/: dashboard.html  login.html
vdiclient/: __init__.py  __main__.py  app.py  platform.py
vdiclient/templates/: base.html  login.html
