[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pve-vdiclient"
dynamic = ["version"]
description = "Flask-based web client for Proxmox VE Virtual Desktop Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "jbergquist"}
]
keywords = ["proxmox", "vdi", "spice", "virtualization", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
]
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "proxmoxer>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/jbergquist/PVE-VDIClient"
"Bug Tracker" = "https://github.com/jbergquist/PVE-VDIClient/issues"
"Source Code" = "https://github.com/jbergquist/PVE-VDIClient"

[project.scripts]
vdiclient = "vdiclient.__main__:main"

[tool.setuptools]
packages = ["vdiclient"]
include-package-data = true

[tool.setuptools.package-data]
vdiclient = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    "static/*.png",
    "static/*.ico",
]

[tool.setuptools.dynamic]
version = {attr = "vdiclient.__version__"}

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
